# tree-sitter-ebnf-xml

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  abnf.abnf  binding.gyp  go.mod  grammar.js  lit.ebnf  package.json  pyproject.toml  setup.py  test.ebnf  test2.ebnf  tree-sitter.json
bindings/c/: tree-sitter-ebnf.pc.in  tree-sitter-ebnfxml.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ebnf/: __init__.py  binding.c
bindings/python/tree_sitter_ebnfxml/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterEbnf/: ebnf.h
bindings/swift/TreeSitterEbnfxml/: ebnfxml.h
bindings/swift/TreeSitterEbnfxmlTests/: TreeSitterEbnfxmlTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: alternation.txt  char_matches.txt  char_matches_broken.txt  choice-then-sequence.txt  choice_seq.txt  seq-then-one-or-more.ebnf  sequence-of-char-ranges.txt  sequence-then-choice.txt  sequence.txt
